fix tablet size and larger reasons section alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,9 +198,25 @@ hr {
     #menu > li {
         padding-left: 1rem;
     }
+
+    /* Reasons section */
+    #benefits-physical, #benefits-mental {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    #benefits-physical > div, #benefits-mental > div {
+        width: 75%;
+    }
+
+    #benefits-mental > div {
+        text-align: end;
+        align-self: flex-end;
+    }
 }
 
-/* main */
+/* 992px and up media */
 
 @media screen and (min-width: 992px) {
     #menu a:hover{
